# rust-ai-agent-hub

./: .env  Cargo.toml  LICENSE  README.md
migrations/: 001_db.sql
src/: constants.rs  db.rs  jwt.rs  main.rs  models.rs
src/handlers/: agent.rs  login.rs  misc.rs  mod.rs
src/middleware/: jwt_middleware.rs  mod.rs  rate_limit.rs
src/processes/: mod.rs  token_purge.rs
src/services/: agent_service.rs  mod.rs
src/static/: doc.html
