[package]
name = "rust-ai-agent-hub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
http = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = [ "mysql", "runtime-tokio-native-tls", "macros", "chrono"  ] }
rand = "0.8"
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"] }